samples/_failures_safe/1761171271_57b6d1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_becd351d.c: In function ‘main’:
./samples/SAFE/__tmp_becd351d.c:147:16: error: invalid operands to binary == (have ‘int’ and ‘Matrix’)
  147 |     if (a.rows == a
      |         ~~~~~~ ^~
      |          |
      |          int
./samples/SAFE/__tmp_becd351d.c:147:20: error: expected ‘)’ at end of input
  147 |     if (a.rows == a
      |        ~           ^
      |                    )
./samples/SAFE/__tmp_becd351d.c:147:5: error: expected declaration or statement at end of input
  147 |     if (a.rows == a
      |     ^~
